--- a/main.html
+++ b/main.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game Stats</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- add table here -->
+	 <table border="1" cellspacing="0" cellpadding="10" style="border-collapse: collapse; width: 80%; margin: 20px auto;">
+        <thead>
+            <tr style="background-color: #1C4E80; color: white;">
+                <th>Name</th>
+                <th>Kills</th>
+                <th>Saved</th>
+                <th>Deaths</th>
+                <th>Revives</th>
+                <th>Win</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr style="background-color: #FFFFFF;">
+                <td>Hackerman</td>
+                <td>10</td>
+                <td>0</td>
+                <td>1</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr style="background-color: #E0E0E0;">
+                <td>Cool Doggo</td>
+                <td>13</td>
+                <td>4</td>
+                <td>8</td>
+                <td>7</td>
+                <td>1</td>
+            </tr>
+            <tr style="background-color: #FFFFFF;">
+                <td>Andrews</td>
+                <td>19</td>
+                <td>2</td>
+                <td>10</td>
+                <td>11</td>
+                <td>0</td>
+            </tr>
+            <tr style="background-color: #E0E0E0;">
+                <td>Strawberry</td>
+                <td>2</td>
+                <td>9</td>
+                <td>3</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+        </tbody>
+    </table>
 
         
 </body>
